CSP Page 'working'.

--- a/app/public/scss/layout.scss
+++ b/app/public/scss/layout.scss
@@ -64,7 +64,7 @@
   grid-template-areas:
         "hd hd hd hd hd hd hd hd hd"
         "bc bc bc bc bc bc pn pn pn"
-        "mc mc mc mc mc mc cl cl cl"
+        "mc mc mc mc mc mc mc mc cl"
         "ft ft ft ft ft ft ft ft ft";
   flex-direction: column;
   align-items: stretch;
