A floating point widget.

--- a/app/public/scss/site.scss
+++ b/app/public/scss/site.scss
@@ -19,6 +19,8 @@
 @import "naming_things.scss";
 @import "funding.scss";
 
+@import "floating_point.scss";
+
 body {
   font-family: SourceSansPro-Regular, Arial, x-locale-body, sans-serif;
   font-variation-settings: 'wght' 400;
