--- a/app/public/scss/site.scss
+++ b/app/public/scss/site.scss
@@ -18,8 +18,9 @@
 // todo move this to it's own repo
 @import "naming_things.scss";
 @import "funding.scss";
-
 @import "floating_point.scss";
+
+@import "teleprompter.scss";
 
 body {
   font-family: SourceSansPro-Regular, Arial, x-locale-body, sans-serif;
