--- a/app/public/scss/teleprompter.scss
+++ b/app/public/scss/teleprompter.scss
@@ -1,10 +1,29 @@
 
 
-.telepromter_flip {
+.teleprompter_mirror {
   -moz-transform:    scaleX(-1); /* Gecko */
   -o-transform:      scaleX(-1); /* Opera */
   -webkit-transform: scaleX(-1); /* Webkit */
   transform:         scaleX(-1); /* Standard */
+}
 
-  filter: FlipH;                 /* IE 6/7/8 */
+.teleprompter_overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  overflow-y: visible;
+  left: 0;
+  top: 0;
+  background: rgba(51, 51, 51, 1.0);
+  z-index: 10;
+  color: white;
+  font-size: 128px;
+  line-height: 128px;
+
+}
+
+.teleprompter_words {
+  position: fixed;
+  left: 0;
+  top: -50;
 }
