Added email link generator. Added words for road objections.

--- a/app/public/scss/site.scss
+++ b/app/public/scss/site.scss
@@ -45,12 +45,12 @@ blockquote {
 }
 
 
-blockquote::before {
-  content: open-quote;
-}
-blockquote::after {
-  content: close-quote;
-}
+//blockquote::before {
+//  content: open-quote;
+//}
+//blockquote::after {
+//  content: close-quote;
+//}
 
 
 
