Improved QR code generator a bit. Added it as a tool.

--- a/app/public/scss/site.scss
+++ b/app/public/scss/site.scss
@@ -21,6 +21,7 @@
 @import "floating_point.scss";
 
 @import "teleprompter.scss";
+@import "qr_code_generator.scss";
 
 body {
   font-family: SourceSansPro-Regular, Arial, x-locale-body, sans-serif;
