Jest tests are working. Twitter splitter has colouring to make it easier to see bugs if nothing else.

--- a/app/public/scss/site.scss
+++ b/app/public/scss/site.scss
@@ -22,6 +22,7 @@
 
 @import "teleprompter.scss";
 @import "qr_code_generator.scss";
+@import "twitter_splitter.scss";
 
 body {
   font-family: SourceSansPro-Regular, Arial, x-locale-body, sans-serif;
