--- a/app/public/scss/site.scss
+++ b/app/public/scss/site.scss
@@ -14,6 +14,7 @@
 @import "comments_panel.scss";
 @import "code.scss";
 @import "merch.scss";
+@import "tables.scss";
 
 // todo move this to it's own repo
 @import "naming_things.scss";
@@ -30,10 +31,6 @@ body {
   font-size: 16px;
 }
 
-th {
-  font-family: Manrope, Arial, x-locale-body, sans-serif;
-  font-weight: 600;
-}
 
 h1, h2, h3, h4, h5, h6 {
   font-family: Cabin, Arial, x-locale-body, sans-serif;
