Adding Avon Crescent stuff.

--- a/app/public/scss/site.scss
+++ b/app/public/scss/site.scss
@@ -9,6 +9,7 @@
 @import "content_links.scss";
 @import "footer.scss";
 @import "header.scss";
+@import "images.scss";
 @import "prev_next.scss";
 @import "basic.scss";
 @import "comments_panel.scss";
