xmas commit why not.

--- a/app/public/scss/site.scss
+++ b/app/public/scss/site.scss
@@ -18,6 +18,7 @@
 
 // todo move this to it's own repo
 @import "naming_things.scss";
+@import "notifications_panel.scss";
 @import "funding.scss";
 @import "floating_point.scss";
 
