--- a/app/public/scss/layout.scss
+++ b/app/public/scss/layout.scss
@@ -66,7 +66,7 @@
   grid-template-areas:
         "hd hd hd hd hd hd hd hd hd"
         "bc bc bc bc bc bc pn pn pn"
-        "mc mc mc mc mc mc mc mc cl"
+        "mc mc mc mc mc mc mc mc mc"
         "ft ft ft ft ft ft ft ft ft";
   flex-direction: column;
   align-items: stretch;
@@ -79,7 +79,8 @@
     grid-template-areas:
         "hd hd hd hd hd hd hd hd hd"
         "bc bc bc bc bc pn pn pn pn"
-        "mc mc mc mc mc mc mc cl cl"
+        "mc mc mc mc mc mc mc mc mc"
+        "cl cl cl cl cl cl cl cl cl"
         "ft ft ft ft ft ft ft ft ft";
     flex-direction: column;
     align-items: stretch;
