Sourcelinks are almost completely working.

--- a/app/public/scss/site.scss
+++ b/app/public/scss/site.scss
@@ -16,6 +16,8 @@
 @use "comments_panel.scss";
 @use "code.scss";
 @use "merch.scss";
+@use "sourcelink.scss";
+
 
 // todo move this to it's own repo
 @use "meme_upload_panel.scss";
