Processor control page is almost working. Moon alerts are also almost working.

--- a/app/public/scss/site.scss
+++ b/app/public/scss/site.scss
@@ -116,3 +116,13 @@ blockquote {
 .text_note_panel {
   flex: 1;
 }
+
+.processors {
+  .disabled {
+    background-color: #ff8b8b;
+  }
+  .enabled {
+    background-color: #8bff95;
+  }
+
+}
