--- a/app/public/scss/site.scss
+++ b/app/public/scss/site.scss
@@ -26,6 +26,8 @@
 @use "notifications_panel.scss";
 @use "funding.scss";
 @use "floating_point.scss";
+@use "room_file_upload_panel.scss";
+
 
 @use "table.scss";
 @use "teleprompter.scss";
