--- a/app/public/scss/site.scss
+++ b/app/public/scss/site.scss
@@ -28,6 +28,7 @@
 @use "floating_point.scss";
 @use "room_file_upload_panel.scss";
 
+@use "bristol_stairs.scss";
 
 @use "table.scss";
 @use "teleprompter.scss";
