Handle cancelling better. Update marker info on map to make changes be reflected when clicking away to a different marker.

--- a/app/public/scss/basic.scss
+++ b/app/public/scss/basic.scss
@@ -75,3 +75,7 @@ ol, ul {
   padding-left: 0;
   list-style-position: inside; // optional, keeps numbers aligned with content
 }
+
+.padding_right {
+  padding-right: 10px;
+}
