I am surprised there are no laws against me writing CSS.

--- a/app/public/css/bristol_stairs_map.css
+++ b/app/public/css/bristol_stairs_map.css
@@ -1,6 +1,6 @@
-#bristol_stairs_map {
-    height: 650px;
-    width: 600px;
-}
+/*#bristol_stairs_map {*/
+/*    height: 650px;*/
+/*    width: 600px;*/
+/*}*/
 
 
