--- a/app/public/scss/bristol_stairs.scss
+++ b/app/public/scss/bristol_stairs.scss
@@ -35,7 +35,7 @@
             display: block;
             margin: 0;
             padding: 0;
-            max-width: 500px;
+            max-width: 90vw;
             max-height: 500px;
             border: 2px solid #000;
             width: auto;
@@ -95,6 +95,10 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+
+            img {
+                max-width: 500px;
+            }
         }
     }
 }
