Workaround. Leaflet JS apparently does not like having a non-fixed height container. It also requires a bit of a shove to go to an exact position.

--- a/app/public/scss/bristol_stairs.scss
+++ b/app/public/scss/bristol_stairs.scss
@@ -82,6 +82,10 @@
         flex-direction: row;
         flex-wrap: nowrap;
 
+        .bristol_stairs_map {
+            height: 500px;
+        }
+
         .bristol_stairs_map,
         .bristol_stairs_panel {
             width: 50%;
