--- a/app/public/scss/site.scss
+++ b/app/public/scss/site.scss
@@ -6,6 +6,7 @@
 @use "layout.scss";
 @use "breadcrumbs.scss";
 @use "button.scss";
+@use "chat.scss";
 @use "content.scss";
 @use "content_links.scss";
 @use "footer.scss";
