--- a/app/public/scss/site.scss
+++ b/app/public/scss/site.scss
@@ -128,5 +128,23 @@ blockquote {
   .enabled {
     background-color: #8bff95;
   }
+}
 
+/* Lightbox overlay */
+.lightbox {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.9);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.lightbox img {
+  max-width: 90%;
+  max-height: 90%;
 }
